get started btn done

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -19,7 +19,7 @@
       <a class="menu-item" href="#pricing">Pricing</a>
       <a class="menu-item" href="#faq">FAQ</a>
     </nav>
-    <button class="get-started-bnt">
+    <a class="get-started-bnt" href="#pricing">
       Get started
       <svg class="get-started-icon">
         <use
@@ -28,7 +28,7 @@
           height="24px"
         ></use>
       </svg>
-    </button>
+    </a>
     <button class="burger-btn js-open-menu" aria-expanded="false">
       <svg class="burger-icon" width="32px" height="18px">
         <use href="./public/img/icons.svg#icon-burger"></use>
