--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -16,13 +16,15 @@
       <li class="faq-item ac">
         <div class="faq-clicker ac-trigger">
           <h3 class="faq-question ac-header">What is SmartNotes?</h3>
-          <svg class="hero-signup-icon-one">
-            <use
-              href="./public/img/icons.svg#icon-arrow-icon"
-              width="24px"
-              height="24px"
-            ></use>
-          </svg>
+          <div class="hero-signup-icon-one-wrapper">
+            <svg class="hero-signup-icon-one">
+              <use
+                href="./public/img/icons.svg#icon-arrow-icon"
+                width="24px"
+                height="24px"
+              ></use>
+            </svg>
+          </div>
         </div>
         <div class="ac-panel">
           <p class="acc-content ac-text">
@@ -40,13 +42,15 @@
           <h3 class="faq-question ac-header">
             How do I get started with SmartNotes?
           </h3>
-          <svg class="hero-signup-icon-one">
-            <use
-              href="./public/img/icons.svg#icon-arrow-icon"
-              width="24px"
-              height="24px"
-            ></use>
-          </svg>
+          <div class="hero-signup-icon-one-wrapper">
+            <svg class="hero-signup-icon-one">
+              <use
+                href="./public/img/icons.svg#icon-arrow-icon"
+                width="24px"
+                height="24px"
+              ></use>
+            </svg>
+          </div>
         </div>
         <div class="ac-panel">
           <p class="acc-content ac-text">
@@ -62,13 +66,15 @@
           <h3 class="faq-question ac-header">
             What are the key features of SmartNotes?
           </h3>
-          <svg class="hero-signup-icon-one">
-            <use
-              href="./public/img/icons.svg#icon-arrow-icon"
-              width="24px"
-              height="24px"
-            ></use>
-          </svg>
+          <div class="hero-signup-icon-one-wrapper">
+            <svg class="hero-signup-icon-one">
+              <use
+                href="./public/img/icons.svg#icon-arrow-icon"
+                width="24px"
+                height="24px"
+              ></use>
+            </svg>
+          </div>
         </div>
         <div class="ac-panel">
           <p class="acc-content ac-text">
@@ -87,13 +93,15 @@
           <h3 class="faq-question ac-header">
             How much does SmartNotes cost?
           </h3>
-          <svg class="hero-signup-icon-one">
-            <use
-              href="./public/img/icons.svg#icon-arrow-icon"
-              width="24px"
-              height="24px"
-            ></use>
-          </svg>
+          <div class="hero-signup-icon-one-wrapper">
+            <svg class="hero-signup-icon-one">
+              <use
+                href="./public/img/icons.svg#icon-arrow-icon"
+                width="24px"
+                height="24px"
+              ></use>
+            </svg>
+          </div>
         </div>
         <div class="ac-panel">
           <p class="acc-content ac-text">
@@ -106,13 +114,15 @@
           <h3 class="faq-question ac-header">
             Who is SmartNotes for?
           </h3>
-          <svg class="hero-signup-icon-one">
-            <use
-              href="./public/img/icons.svg#icon-arrow-icon"
-              width="24px"
-              height="24px"
-            ></use>
-          </svg>
+          <div class="hero-signup-icon-one-wrapper">
+            <svg class="hero-signup-icon-one">
+              <use
+                href="./public/img/icons.svg#icon-arrow-icon"
+                width="24px"
+                height="24px"
+              ></use>
+            </svg>
+          </div>
         </div>
         <div class="ac-panel">
           <p class="acc-content ac-text">
