--- a/src/partials/pricing.html
+++ b/src/partials/pricing.html
@@ -64,13 +64,15 @@
           </ul>
           <button class="pricing-start-btn-one">
             Start Free Trial
-            <svg class="hero-signup-icon-one">
-              <use
-                href="./public/img/icons.svg#icon-arrow-icon"
-                width="24px"
-                height="24px"
-              ></use>
-            </svg>
+            <div class="hero-signup-icon-one-wrapper">
+              <svg class="hero-signup-icon-one">
+                <use
+                  href="./public/img/icons.svg#icon-arrow-icon"
+                  width="24px"
+                  height="24px"
+                ></use>
+              </svg>
+            </div>
           </button>
         </div>
         <p class="no-card-par">No credit card required</p>
@@ -170,13 +172,15 @@
           </ul>
           <button class="pricing-start-btn-two">
             Start Free Trial
-            <svg class="hero-signup-icon">
-              <use
-                href="./public/img/icons.svg#icon-arrow-icon"
-                width="24px"
-                height="24px"
-              ></use>
-            </svg>
+            <div class="hero-signup-icon-wrapper">
+              <svg class="hero-signup-icon">
+                <use
+                  href="./public/img/icons.svg#icon-arrow-icon"
+                  width="24px"
+                  height="24px"
+                ></use>
+              </svg>
+            </div>
           </button>
         </div>
         <p class="no-card-par">No credit card required</p>
@@ -388,13 +392,15 @@
           </ul>
           <button class="pricing-start-btn-one">
             Contact Support
-            <svg class="hero-signup-icon-one">
-              <use
-                href="./public/img/icons.svg#icon-arrow-icon"
-                width="24px"
-                height="24px"
-              ></use>
-            </svg>
+            <div class="hero-signup-icon-one-wrapper">
+              <svg class="hero-signup-icon-one">
+                <use
+                  href="./public/img/icons.svg#icon-arrow-icon"
+                  width="24px"
+                  height="24px"
+                ></use>
+              </svg>
+            </div>
           </button>
         </div>
       </li>
