--- a/src/partials/signup.html
+++ b/src/partials/signup.html
@@ -15,13 +15,15 @@
       </div>
       <a class="signup-for-free" href="#pricing"
         >Sign Up for Free
-        <svg class="signup-for-free-icon">
-          <use
-            href="./public/img/icons.svg#icon-arrow-icon"
-            width="32px"
-            height="32px"
-          ></use>
-        </svg>
+        <div class="signup-for-free-icon-wrapper">
+          <svg class="signup-for-free-icon">
+            <use
+              href="./public/img/icons.svg#icon-arrow-icon"
+              width="32px"
+              height="32px"
+            ></use>
+          </svg>
+        </div>
       </a>
     </div>
     <div class="signup-img-wrapper">
