--- a/src/styles/benefits.css
+++ b/src/styles/benefits.css
@@ -105,6 +105,7 @@
   }
 
   .benef-list {
+    max-width: 744px;
     flex-direction: row;
     flex-wrap: wrap;
   }
@@ -132,6 +133,7 @@
 @media screen and (min-width: 1440px) {
   .benef-list {
     align-items: start;
+    max-width: 1440px;
   }
 
   .benef-item:nth-child(1),
